--- a/plans/templates/plans/billing_info_create.html
+++ b/plans/templates/plans/billing_info_create.html
@@ -5,7 +5,7 @@
 {% block body %}
     <div class="row">
         <div class="col-sm-6">
-            <form action="{% url 'billing_info_create' %}" method="post" class="form">
+            <form action="{% url 'plans:billing_info_create' %}" method="post" class="form">
                 <legend>{% trans "Provide billing data" %}</legend>
 
                 {% csrf_token %}
