--- a/plans/templates/plans/billing_info_update.html
+++ b/plans/templates/plans/billing_info_update.html
@@ -5,11 +5,11 @@
 {% block body %}
     <div class="row">
         <div class="col-sm-6">
-            <form action="{% url 'billing_info_update' %}" method="post" class="form">
+            <form action="{% url 'plans:billing_info_update' %}" method="post" class="form">
                 <legend>{% trans "Provide billing data" %}</legend>
                 {% csrf_token %}
                 {{ form.as_p }}
-                <a class="btn btn-danger" href="{% url 'billing_info_delete' %}">Delete</a>
+                <a class="btn btn-danger" href="{% url 'plans:billing_info_delete' %}">Delete</a>
                 <button type="submit" class="btn btn-primary">
                     Save
                 </button>
