--- a/plans/templates/plans/current.html
+++ b/plans/templates/plans/current.html
@@ -15,7 +15,7 @@
         <dt>{% trans "Expire" %}:</dt>
         <dd> {{ userplan.expire }}</dd>
         <dt>{% trans "Plan" %}:</dt>
-        <dd>{{ userplan.plan }} <a href="{% url 'upgrade_plan' %}">{% trans "upgrade" %}</a></dd>
+        <dd>{{ userplan.plan }} <a href="{% url 'plans:upgrade_plan' %}">{% trans "upgrade" %}</a></dd>
     </dl>
 
     <h2>{% trans "Plan details" %}</h2>
@@ -29,7 +29,7 @@
 
     <h1>{% trans "Need more?" %}</h1>
 
-    {% url 'upgrade_plan' as upgrade_url %}
+    {% url 'plans:upgrade_plan' as upgrade_url %}
     {% blocktrans %}
         Please see other <a href="{{ upgrade_url }}">currently available plans</a>.
     {% endblocktrans %}
